BUGFIX: padding of <aside> was mofidifed to remove the overlap created by resizing the browser window.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,7 +59,7 @@ aside {
 	position: fixed;
 	width: 20%;
 	height: 100%;
-	padding: 0 15px;
+	padding: 0 5px;
 	margin-right: 2px;
 	float: left;
 	background: #a1a2e6;
